--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TH - Inventory</title>
+  <title>JASS - Billing</title>
 </head>
 
 <body>
